# GenAI_Projects

./: .gitignore  README.md  Reference.txt  Things_to_Learn.md  main.py  pyproject.toml  requirements.txt  virenvcreation.txt
.devcontainer/: devcontainer.json
000_Learning_Center/: Model_Selection_Gorq.ipynb
000_Learning_Center/001_Langchain/: Langchain_Compnents_Explained.ipynb  langchain_learning_notes.md
000_Learning_Center/001_Langchain/LangChain/: Langchain_Compnents_Explained.ipynb  Reference.md
000_Learning_Center/001_Langchain/LangChain/chroma_db/: chroma.sqlite3
000_Learning_Center/001_Langchain/LangChain/faiss_index/: index.pkl
000_Learning_Center/001_Langchain/LangChain_Updated/updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb
000_Learning_Center/001_Langchain/faiss_index/: index.pkl
000_Learning_Center/002_Generative_Model_Projects/001-openai/: 1.1.1-GettingStarted.ipynb
000_Learning_Center/002_Generative_Model_Projects/002-ollama/: app.py
000_Learning_Center/002_Generative_Model_Projects/002_1-openai/: 1.1.2-Simpleapp.ipynb
000_Learning_Center/002_Generative_Model_Projects/002_3-ChatBot_LCEL/: chatbots_WithHistory.ipynb  serve.py  simplellmLCEL.ipynb
000_Learning_Center/002_Generative_Model_Projects/003_ChatBot_LCEL/: Local_Vector_Retriver.ipynb  chatbots_WithHistory.ipynb  vectorretriever.ipynb
000_Learning_Center/002_Generative_Model_Projects/004_QandA/: conversationqa.ipynb
000_Learning_Center/002_Generative_Model_Projects/005_OpenAI_Chatbot/: requirements.txt
000_Learning_Center/002_Generative_Model_Projects/007_RAG_Document_Q&A/: app_huggingfaceembedding.py
000_Learning_Center/002_Generative_Model_Projects/008_RAG_Q&A_Conversation/: app.py
000_Learning_Center/002_Generative_Model_Projects/009_PDF_Query_Cassandra/: README.md  requirements.txt
000_Learning_Center/003_Tools_Agents/: app.py  tools_agents.ipynb
000_Learning_Center/004_SQL_Chatbot/: app.py  sqlite_Mandatory.py
000_Learning_Center/005_Text_Summarization/: app.py  text_summarization.ipynb
000_Learning_Center/006_Math_Project/: app.py  model_registry.py
000_Learning_Center/006_RAG_AsDataAnalyst/: RAG_DataAnalyst.ipynb
000_Learning_Center/007_HuggingFace/: experiment_HFTutorial.ipynb  main.py  requirements.txt  texttospeech.ipynb
000_Learning_Center/008_Codellama/: modelfile
001_RAG_Context_Generation/: RAG_From_Arxiv.ipynb  RAG_From_PDF.ipynb  RAG_PDF_app.py  README.md  requirements.txt
002_RAG_Q&A/: RAG_Q&A_WithChatHistory.ipynb  RAG_Q&A_WithChatHistory.py  README.md  requirements.txt
003_With_LCEL/: simplellmLCEL.ipynb
004_RAG_AsDataAnalyst/: RAG_DataAnalyst.ipynb  requirements.txt
005_Streamlit_DataAnalysis/: requirements.txt
005_Streamlit_DataCleansing/: README.md  app.py
005_Streamlit_DataCleansing/modules/: __init__.py  llm.py  missing_analysis.py  preprocessing.py  profiler.py  uploader.py  utils.py  visualization.py
099_Other_GenAI_Tools/001_AWS_BedRock/: app.py  main.py
099_Other_GenAI_Tools/002_Nvidia_NIM/: app.py  finalapp.py  main.py
099_Other_GenAI_Tools/003_Crew_AI_Projects/: Divident_Scraping.py  Product_Details_Scraping.py  agents.py  mysqlcompletecrew.py  requirements.txt  sql_search_crew.py  tasks.py  tools.py
099_Other_GenAI_Tools/003_Crew_AI_Projects/Crew_AI_Experiments/: agents.py  crew.py  tools.py
099_Other_GenAI_Tools/003_Crew_AI_Projects/SQL_Search/: README.md  crewai_sql_chatbot.py  requirements.txt  sqlcrewapp.py
