[project]
name = "14-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "bs4>=0.0.2",
    "certifi>=2026.2.25",
    "chromadb>=0.5.23",
    "duckdb>=1.5.1",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "huggingface-hub>=0.36.2",
    "ipykernel>=7.2.0",
    "langchain==0.2.16",
    "langchain-chroma>=0.1.4",
    "langchain-community==0.2.16",
    "langchain-core==0.2.38",
    "langchain-experimental>=0.0.65",
    "langchain-groq>=0.1.9",
    "langchain-huggingface>=0.0.3",
    "langchain-openai>=0.1.23",
    "langchain-text-splitters>=0.2.4",
    "langserve>=0.2.3",
    "matplotlib>=3.10.8",
    "msoffcrypto-tool>=6.0.0",
    "mysql-connector-python>=9.6.0",
    "numexpr>=2.14.1",
    "numpy>=1.26.4",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "streamlit>=1.56.0",
    "tabulate>=0.10.0",
    "tokenizers==0.19.1",
    "tqdm>=4.67.3",
    "unstructured>=0.22.18",
    "uvicorn>=0.44.0",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
