[project]
name = "14-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=3.0.0",
    "awscli>=1.44.87",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.97",
    "bs4>=0.0.2",
    "certifi>=2026.4.22",
    "chromadb>=0.5.23",
    "crewai[litellm]>=1.6.1",
    "crewai-tools>=1.6.1",
    "dataset>=2.0.0",
    "datasets==2.21.0",
    "duckdb>=1.5.2",
    "duckduckgo-search==5.3.1b1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "git-filter-repo>=2.47.0",
    "gradio>=6.13.0",
    "hf-xet>=1.4.3",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.2.0",
    "langchain>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-experimental>=0.0.65",
    "langchain-groq>=0.1.9",
    "langchain-huggingface>=1.2.0",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-openai>=0.1.23",
    "langchain-text-splitters>=0.3.0",
    "langserve>=0.2.3",
    "matplotlib>=3.10.9",
    "missingno>=0.5.2",
    "msoffcrypto-tool>=6.0.0",
    "mysql-connector-python>=9.6.0",
    "nltk>=3.9.4",
    "numexpr>=2.14.1",
    "openai>=1.109.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2.2",
    "pymysql>=1.1.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "pytube>=15.0.0",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "sentence-transformers>=2.7.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "streamlit>=1.56.0",
    "tabulate>=0.10.0",
    "tokenizers>=0.19.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=4.44.0",
    "unstructured>=0.22.22",
    "uvicorn>=0.46.0",
    "validators==0.28.1",
    "webdriver-manager>=4.0.2",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=0.6.1",
    "pinecone-text>=0.11.0",
    "pinecone-notebooks>=0.1.1",
    "pinecone>=8.1.2",
    "pinecone-client>=6.0.0",
]
